--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,5 +15,10 @@
                   fieldName="INSTANCE" language="TEAL" extensions="teal"/>
         <lang.parserDefinition language="TEAL"
                                implementationClass="com.bloxbean.algorand.idea.language.TEALParserDefinition"/>
+        <lang.syntaxHighlighterFactory language="TEAL"
+                                       implementationClass="com.bloxbean.algorand.idea.language.TEALSyntaxHighlighterFactory"/>
+        <colorSettingsPage implementation="com.bloxbean.algorand.idea.language.TEALColorSettingsPage"/>
+        <completion.contributor language="TEAL"
+                                implementationClass="com.bloxbean.algorand.idea.language.TEALCompletionContributor"/>
     </extensions>
 </idea-plugin>
