--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'lib')
+    compile group: 'com.algorand', name: 'algosdk', version: '1.2.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
