--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -182,6 +182,11 @@
         </action>
         <!-- Stateful contract actions ends here-->
 
+        <action id="com.bloxbean.algodea.idea.pkg.action.PkgJsonReloadAction" class="com.bloxbean.algodea.idea.pkg.action.PkgJsonReloadAction" text="Reload algo-package.json"
+                description="Reload algo-package.json file">
+            <add-to-group group-id="com.bloxbean.algodea.idea.core.action.AlgoActionGroup"
+                          relative-to-action="com.bloxbean.algodea.idea.configuration.action.ConfigurationAction" anchor="before"/>
+        </action>
         <action id="com.bloxbean.algodea.idea.configuration.action.ConfigurationAction" class="com.bloxbean.algodea.idea.configuration.action.ConfigurationAction" text="Configuration"
                 description="Configure Algorand Server">
             <add-to-group group-id="com.bloxbean.algodea.idea.core.action.AlgoActionGroup" anchor="last"/>
